# python_fca

./: README.md  ejercicios.md  ejercicios2.md  main.py  pyproject.toml  temp.py  temp2.py
alembic/: env.py
alembic/versions/: 6417cd0340df_create_users_table.py  ec2a9937d444_create_users_table.py
entorno/: datos.json  entrypoint.py
fastapi/: crud_server.py  server.py
http/: consumo_api.py  rick_morthy_ui.py
semana_1/: 1_instalacion.md  2_tipo_datos.md  3_estructura_control.md  README.md  ejercicios.md
semana_2/: 1_funciones.md  2_try_except.md  3_modulos.md  4_proyecto.md  readme.md
semana_3/: 1_poo.md  2_files.md
streamlit_server/: interfaz.py
tienda/: agregar.py  consultar.py  temp2.py
