[project]
name = "python-class"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "streamlit>=1.58.0",
    "httpx>=0.28.1",
    "requests>=2.34.2",
]

[tool.uv.workspace]
members = [
    "test/migration",
]
